<resources>
    <string name="app_name" translatable="false">DeaBee</string>
    <string name="action_settings">Настройки</string>
    <string name="action_feedback">Обратная связь</string>
    <string name="action_invite">Пригласить друзей</string>
    <string name="tab_overview">Обзор</string>
    <string name="tab_history">ДНЕВНИК</string>
    <string name="tab_tips">Советы</string>
    <string name="activity_main_add_new_reading">Добавить запись</string>
    <string name="title_activity_hello">Привет.</string>
    <string name="helloactivity_headline">Регистрация</string>
    <string name="helloactivity_terms">Условия использования</string>
    <string name="helloactivity_subhead">Необходимо несколько быстрых вещей, прежде чем начать.</string>
    <string name="helloactivity_country">Страна</string>
    <string name="helloactivity_age">Возраст</string>
    <string name="helloactivity_age_invalid">Пожалуйста, введите действительный возраст.</string>
    <string name="helloactivity_username_invalid">Данный логин уже занят, пожалуйста выберите другой.</string>
    <string name="helloactivity_gender">Язык</string>
    <string-array name="helloactivity_gender_list" translatable="false">
        <item>ky-KG</item>
        <item>ru</item>
    </string-array>
    <string name="preference_language">Язык</string>
    <string-array name="preference_language_item_text">
        <item>Русский</item>
        <item>Кыргызча</item>
    </string-array>
    <string-array name="preference_language_item_val">
        <item>ru</item>
        <item>ky-KR</item>
    </string-array>
    <string name="helloactivity_spinner_diabetes_type">Тип диабета</string>
    <string name="helloactivity_spinner_diabetes_type_1">Тип 1</string>
    <string name="helloactivity_spinner_diabetes_type_2">Тип 2</string>
    <string name="helloactivity_spinner_diabetes_gdm">Гестационная</string>
    <string name="helloactivity_spinner_diabetes_lada">LADA</string>
    <string-array name="helloactivity_diabetes_type" translatable="false">
        <item>@string/helloactivity_spinner_diabetes_type_1</item>
        <item>@string/helloactivity_spinner_diabetes_type_2</item>
        <item>@string/helloactivity_spinner_diabetes_gdm</item>
        <item>@string/helloactivity_spinner_diabetes_lada</item>
    </string-array>
    <string name="helloactivity_spinner_preferred_glucose_unit">Предпочтительная единица глюкозы</string>
    <string name="helloactivity_spinner_preferred_glucose_unit_1" translatable="false">мг/ДЛ</string>
    <string name="helloactivity_spinner_preferred_glucose_unit_2">ммоль/л</string>
    <string-array name="helloactivity_preferred_glucose_unit" translatable="false">
        <item>@string/helloactivity_spinner_preferred_glucose_unit_2</item>
        <item>@string/helloactivity_spinner_preferred_glucose_unit_1</item>
    </string-array>
    <string name="preferences_spinner_preferred_a1c_unit">Предпочитаемая ед. HbA1c</string>
    <string name="preferences_spinner_preferred_a1c_unit_1">процент</string>
    <string name="preferences_spinner_preferred_a1c_unit_2" translatable="false">ммоль/л</string>
    <string-array name="preferences_preferred_a1c_unit" translatable="false">
        <item>@string/preferences_spinner_preferred_a1c_unit_1</item>
        <item>@string/preferences_spinner_preferred_a1c_unit_2</item>
    </string-array>
    <string name="preferences_spinner_preferred_weight_unit">Предпочитаемая ед. Веса</string>
    <string name="preferences_spinner_preferred_weight_unit_1">кг</string>
    <string name="preferences_spinner_preferred_weight_unit_2">pounds</string>
    <string-array name="preferences_preferred_weight_unit" translatable="false">
        <item>@string/preferences_spinner_preferred_weight_unit_1</item>
        <item>@string/preferences_spinner_preferred_weight_unit_2</item>
    </string-array>
    <string name="helloactivity_share_data">Я согласен с условиями на обработку моих персональных данных</string>
    <string name="helloactivity_hint_settings">Вы можете изменить их в настройках позже.</string>
    <string name="helloactivity_button_next">ДАЛЕЕ</string>
    <string name="helloactivity_button_start">НАЧАТЬ</string>
    <string name="fragment_empty_text">No info available yet. \n Add your first reading here.</string>
    <string name="dialog_add_title">Добавить уровень глюкозы в крови</string>
    <string name="dialog_add_concentration">Глюкоза</string>
    <string name="dialog_add_concentration_um" translatable="false">mg/dL</string>
    <string name="dialog_add_date">Дата</string>
    <string name="dialog_add_time">Время</string>
    <string name="dialog_add_measured">измеренный</string>
    <string name="dialog_add_type_1">До завтрака</string>
    <string name="dialog_add_type_2">После завтрака</string>
    <string name="dialog_add_type_3">До обеда</string>
    <string name="dialog_add_type_4">После обеда</string>
    <string name="dialog_add_type_5">Перед ужином</string>
    <string name="dialog_add_type_6">После ужина</string>
    <string name="dialog_add_type_7">Легкая закуска</string>
    <string name="dialog_add_type_8">перед сном</string>
    <string name="dialog_add_type_9">Ночь</string>
    <string name="dialog_add_type_10">Натощак глюкоза</string>
    <string name="dialog_add_type_11">Перепроверьте</string>
    <string name="dialog_add_type_12">Другое</string>
    <string-array name="dialog_add_measured_list" translatable="false">
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_7</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_9</item>
        <item>@string/dialog_add_type_10</item>
        <item>@string/dialog_add_type_11</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string name="dialog_add_cancel">ОТМЕНА</string>
    <string name="dialog_add_add">ДОБАВИТЬ</string>
    <string name="dialog_error2">Пожалуйста, введите правильное значение.</string>
    <string name="dialog_error">Пожалуйста, заполните все поля.</string>
    <string name="dialog_edit">Изменить</string>
    <string name="dialog_delete">Удалить</string>
    <string name="fragment_history_snackbar_text">1 запись удалена</string>
    <string name="fragment_history_snackbar_action">ОТМЕНА</string>
    <string name="fragment_overview_last_reading">Последняя проверка:</string>
    <string name="fragment_overview_trend">Тенденция за последний месяц:</string>
    <string name="fragment_overview_trend_positive">в диапазоне и здоровым</string>
    <string name="fragment_overview_selector_month">Месяц</string>
    <string name="fragment_overview_selector_day">День</string>
    <string name="fragment_overview_selector_week">Неделя</string>
    <string-array name="fragment_overview_selector_range" translatable="false">
        <item>@string/fragment_overview_selector_day</item>
        <item>@string/fragment_overview_selector_week</item>
        <item>@string/fragment_overview_selector_month</item>
    </string-array>
    <string-array name="fragment_overview_selector_metric" translatable="false">
        <item>@string/fab_glucose</item>
        <item>@string/fab_HB1AC</item>
        <item>@string/fab_cholesterol</item>
        <item>@string/fab_pressure</item>
        <item>@string/fab_ketones</item>
        <item>@string/fab_weight</item>
    </string-array>
    <string name="tip_example" translatable="false">Use less cheese in your recipes and meals. Fresh mozzarella packed in water and Swiss cheese are usually lower in sodium.</string>
    <string name="preferences_about">О программе</string>
    <string name="preferences_experimental_title" translatable="false">Здесь будут драконы: /</string>
    <string name="preferences_experimental">Эти функции являются экспериментальными и могут работать не полностью и предназначены для раннего тестирования пользователями. Помните, что вы можете встряхнуть свой телефон, чтобы отправить нам отзыв.</string>
    <string name="version" translatable="false">2.0.0</string>
    <string name="preferences_version">Версия</string>
    <string name="preferences_coming_soon">Скоро будет..</string>
    <string name="preferences_terms">Условия использования</string>
    <string name="glucose_reading_type">Тип</string>
    <string name="weight">Вес</string>
    <string name="dialog_add_custom_type">Своя категория измерения</string>
    <string name="helloactivity_spinner_preferred_range">Предпочитаемый диапазон</string>
    <string name="helloactivity_preferred_range_min">Минимальное значение</string>
    <string name="helloactivity_preferred_range_max">Максимальное значение</string>
    <string name="preferences_about_glucosio">О DeaBee</string>
    <string name="preferences_freestyle_libre_experimental">ЭКСПЕРИМЕНТАЛЬНАЯ ЧАСТЬ: Включить поддержку FreeStyle Libre®</string>
    <string name="preferences_font_dyslexia_experimental">ЭКСПЕРИМЕНТАЛЬНАЯ ЧАСТЬ: Повышение читабельности для пользователей с дислексией</string>
    <string name="preferences_analytics_opt_in" translatable="false">Включить аналитику</string>
    <string name="fab_weight">Вес тела</string>
    <string name="fab_ketones">Кетоны</string>
    <string name="fab_pressure">Кровяное давление</string>
    <string name="fab_cholesterol">Уровень холестерина</string>
    <string name="fab_HB1AC">Показания HbA1c</string>
    <string name="fab_glucose">Уровень глюкозы в крови</string>
    <string name="preferences_graph_old">Вернуться к старому графику</string>
    <string name="food">Еда</string>
    <string name="pref_username" translatable="false">Телефон</string>
    <string name="pref_insulinName" translatable="false">Инсулин</string>
    <string name="pref_insulinCompany">Производитель</string>
    <string name="pref_userType">Я являюсь:</string>
    <string name="fab_insulin">Инсулин</string>
    <string name="step_fab_add_text">Пошаговый ввод</string>
    <string name="pref_pin" translatable="false">ПИН</string>
</resources>