<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Glucosio Foundation
  ~
  ~ This file is part of Glucosio.
  ~
  ~ Glucosio is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ Glucosio is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Glucosio.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:id="@+id/pref_userType"
        android:entries="@array/pref_userTypeTexts"
        android:entryValues="@array/pref_userTypeValues"
        android:key="pref_userType"
        android:title="@string/pref_userType" />
    <EditTextPreference
        android:dialogTitle="@string/pref_username"
        android:inputType="text|phone"
        android:key="pref_username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_pin" />
    <ListPreference
        android:id="@+id/pref_language"
        android:entries="@array/preference_language_item_text"
        android:entryValues="@array/preference_language_item_val"
        android:key="pref_language"
        android:title="@string/helloactivity_gender" />
    <ListPreference
        android:id="@+id/preferences_diabetes_type"
        android:entries="@array/helloactivity_diabetes_type"
        android:entryValues="@array/helloactivity_diabetes_type"
        android:key="pref_diabetes_type"
        android:title="@string/helloactivity_spinner_diabetes_type" />
    <ListPreference
        android:entries="@array/pref_insulinNames"
        android:entryValues="@array/pref_insulinNames"
        android:key="pref_insulinName"
        android:title="@string/pref_insulinName" />
    <ListPreference
        android:entries="@array/pref_insulinCompanies"
        android:entryValues="@array/pref_insulinCompanies"
        android:key="pref_insulinCompany"
        android:title="@string/pref_insulinCompany" />
    <ListPreference
        android:id="@+id/preferences_unit_glucose"
        android:entries="@array/helloactivity_preferred_glucose_unit"
        android:entryValues="@array/helloactivity_preferred_glucose_unit"
        android:key="pref_unit_glucose"
        android:title="@string/helloactivity_spinner_preferred_glucose_unit" />
    <ListPreference
        android:id="@+id/preferences_unit_a1c"
        android:entries="@array/preferences_preferred_a1c_unit"
        android:entryValues="@array/preferences_preferred_a1c_unit"
        android:key="pref_unit_a1c"
        android:title="@string/preferences_spinner_preferred_a1c_unit" />
    <ListPreference
        android:id="@+id/preferences_unit_weight"
        android:entries="@array/preferences_preferred_weight_unit"
        android:entryValues="@array/preferences_preferred_weight_unit"
        android:key="pref_unit_weight"
        android:title="@string/preferences_spinner_preferred_weight_unit" />
    <ListPreference
        android:id="@+id/preferences_range"
        android:entries="@array/helloactivity_preferred_range"
        android:entryValues="@array/helloactivity_preferred_range"
        android:key="pref_range"
        android:title="@string/helloactivity_spinner_preferred_range" />
    <EditTextPreference
        android:dialogTitle="@string/helloactivity_preferred_range_min"
        android:inputType="numberDecimal"
        android:key="pref_range_min"
        android:title="@string/helloactivity_preferred_range_min" />
    <EditTextPreference
        android:dialogTitle="@string/helloactivity_preferred_range_max"
        android:inputType="numberDecimal"
        android:key="pref_range_max"
        android:title="@string/helloactivity_preferred_range_max" />
    <SwitchPreference
        android:id="@+id/preferences_analytics_opt_in"
        android:defaultValue="false"
        android:key="pref_analytics_opt_in"
        android:title="@string/preferences_analytics_opt_in" />
    <SwitchPreference
        android:id="@+id/preferences_graph_old"
        android:defaultValue="false"
        android:key="pref_graph_old"
        android:title="@string/preferences_graph_old" />
    <SwitchPreference
        android:id="@+id/preferences_font_dyslexia"
        android:defaultValue="false"
        android:key="pref_font_dyslexia"
        android:summary="@string/preferences_font_dyslexia_experimental" />
    <SwitchPreference
        android:id="@+id/preferences_freestyle_libre"
        android:summary="@string/preferences_freestyle_libre_experimental"
        android:defaultValue="false"
        android:key="pref_freestyle_libre"
        />
    <!--    <Preference
            android:key="backup_settings"
            android:title="Backup" />-->
    <Preference
        android:key="about_settings"
        android:title="@string/preferences_about_glucosio" />
</PreferenceScreen>